styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    
    body {
        @apply font-[sans-serif];
    }

    ::-webkit-scrollbar {
        @apply w-2.5 h-2.5;
    }

    ::-webkit-scrollbar-track {
        @apply bg-gray-200;
    }

    ::-webkit-scrollbar-thumb {
        @apply bg-blue-600;
    }

    ::-webkit-scrollbar-thumb:hover {
        @apply bg-blue-700;
    }

    textarea, input:focus {
        @apply focus:outline-none;
    }

    .ul-padding{
        padding-inline-start: 0.9rem;
    }

    .ul-padding-none{
        padding-inline-start: 0;
    }
}

@layer components{
    .pi{
        @apply p-2 mb-2 text-black bg-white rounded text-[0.9rem];
    }

    .profileInput{
        @apply pi file:border-0 file:bg-blue-500 file:text-white file:rounded-sm;
    }

    .flex-col-gap-2{
        @apply flex flex-col gap-2;
    }

    .flex-wrap-gap-2{
        @apply flex flex-wrap gap-2;
    }

    .other-input{
        @apply p-2 mb-2 text-black bg-white rounded focus:placeholder-transparent;
    }

    .input-title{
        @apply text-[1rem] text-white font-semibold;
    }

    .f-col{
        @apply flex flex-col;
    }

    .grid-4{
        @apply grid grid-cols-[repeat(auto-fit,minmax(150px,1fr))] gap-4;
    }

    .editable{
        @apply hover:bg-gray-100 hover:cursor-text outline-none;
    }

}

.name{
    font-size: 20px;
    font-weight: 700;
}

.profession{
    font-size: 16px;
    font-weight: 500;
}

.contact{
    font-size: 14px;
    font-weight: 400;
}

.social-media{
    font-size: 12px;
    font-weight: 400;
}

.section-title{
    font-size: 16px;
    font-weight: 700;
}

.content{
    font-size: 14px;
    font-weight: 400;
}

.sub-content{
    font-size: 12px;
    font-weight: 400;
}

.i-bold{
    font-weight: 700 !important;
}

@media print {
    .exclude-print {
        display: none;
    }

    .rm-padding-print {
        padding: 0;
    }

    @page {
        size: A4;
        /* Remove default browser margins */
        margin: 0; 
    }

    .preview {
        overflow-y: visible !important;
        /* Add some padding back for content if needed, adjust as necessary */
        padding: 10mm; 
    }
}

